Frontend: Style Bookmark List (Type Text) [WIP]

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react-refresh": "^0.10.0"
     },
     "dependencies": {
         "react": "^17.0.2",
